--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <meta name="author" content="Lomé Bordes">
+    <meta name="description" content="Portfolio">
+    <meta name="keywords" content="JavaScript, Vue.js, Portfolio, Lomé Bordes, Liuddy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <link rel="icon" href="/icon.png">
+    <title>Liuddy's Portfolio</title>
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
