--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
   <head>
     <meta charset="UTF-8">
     <meta name="author" content="Lomé Bordes">
@@ -7,6 +7,7 @@
     <meta name="keywords" content="JavaScript, Vue.js, Portfolio, Lomé Bordes, Liuddy">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/icon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Liuddy's Portfolio</title>
   </head>
   <body>
